--- a/Lecture_11/index.html
+++ b/Lecture_11/index.html
@@ -25,6 +25,6 @@
     </video>
 
     <iframe src="../Lecture_10/resume.html" height="800" width="700"></iframe>
-    <iframe src="https://www.youtube.com/watch?v=MXs802oGzio" frameborder="0"></iframe>
+    <iframe src="https://www.youtube.com/embed/33VxtqlP7HE" frameborder="0"></iframe>
 </body>
 </html>
