--- a/Lecture_12/index.html
+++ b/Lecture_12/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Favicon, Meta, Title etc.</title>
+
+    <meta name="description" content="This website aims to create India's best coders">
+    <meta name="keywords" content="Codehelp, operating system, github">
 
     <link rel="shortcut icon" href="./logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
