--- a/Lecture_15/index.html
+++ b/Lecture_15/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS Box Model</title>
     <style>
+        /* *{
+            padding: 0;
+            margin: 0;
+        } */
         h1{
             background-color: aquamarine;
             /* border-style: solid;
@@ -15,8 +19,9 @@
             /* border-top-left-radius: 5px; */
             border-radius: 5px;
             width: 350px;
-            text-align: center;
+            /* text-align: center; */
             /* height: 100px; */
+            box-sizing: border-box;
         }
         .firstPara{
             background-color: blanchedalmond;
@@ -24,6 +29,18 @@
             border-radius: 5px;
             width: 350px;
             text-align: center;
+            padding: 5px 10px 5px 10px;
+            /* padding-left: 10px;
+            padding-top: 5px;
+            padding-right: 10px;
+            padding-bottom: 5px; */
+            /* margin: 30px; */
+            /* margin-top: 40px;
+            margin-left: 20px;
+            margin-right: 20px;
+            margin-bottom: 40px; */
+            /* margin: 40px 20px 40px 20px; */
+            margin: 30px 20px;
         }
         .secondPara{
             background-color: chartreuse;
@@ -44,7 +61,7 @@
             border: solid brown 2px;
             border-radius: 5px;
             text-align: center;
-            /* padding: 5px; */
+            padding: 5px;
         }
     </style>
 </head>
