--- a/Lecture_18/size_unit.html
+++ b/Lecture_18/size_unit.html
@@ -5,15 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Size Unit</title>
     <style>
-        .box{
+        /* .box{
             border: 2px solid red;
             width: 50%;
+        } */
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        /* .parent{
+            border: 1px solid green;
+            background-color: beige;
+            width: 50%;
+        }
+        .child{
+            border: 1px solid blueviolet;
+            background-color: aquamarine;
+            width: 50%;
+        }
+        .container{
+            border: 1px solid black;
+            background-color: chartreuse;
+            height: 100vh;
+            width: 50vw;
+        }
+        .box1{
+            border: 1px solid black;
+
+        } */
+        .wrapper {
+            font-size: 1em;
+        }
+
+        .px {
+            width: 200px;
+        } 
+
+        .vw {
+            width: 10vw;
+        }
+
+        .em {
+            width: 10em;
         }
     </style>
 </head>
 <body>
-    <div class="box">
+    <!-- <div class="box">
         welcome to code help
+    </div> -->
+        <!-- <div class="parent">
+            <div class="child">
+                CHILD
+            </div>
+        </div>  -->
+<!-- 
+    <div class="container">
+        Welcome to Codehelp
+    </div>
+
+    <div class="box1">
+        Debaditya Singh
+    </div> -->
+
+    <div class="wrapper">
+        <div class="box px">I am 200px wide</div>
+        <div class="box vw">I am 10vw wide</div>
+        <div class="box em">I am 10em wide</div>
     </div>
 </body>
 </html>
