--- a/Lecture_18/size_unit.html
+++ b/Lecture_18/size_unit.html
@@ -9,10 +9,10 @@
             border: 2px solid red;
             width: 50%;
         } */
-        *{
+        /* *{
             margin: 0;
             padding: 0;
-        }
+        } */
         /* .parent{
             border: 1px solid green;
             background-color: beige;
@@ -33,7 +33,7 @@
             border: 1px solid black;
 
         } */
-        .wrapper {
+        /* .wrapper {
             font-size: 1em;
         }
 
@@ -47,7 +47,20 @@
 
         .em {
             width: 10em;
+        } */
+
+        /* .container{
+            font-size: 10px;
         }
+        .box{
+            font-size: 10em;
+        } */
+
+        .firstPara{
+            border: 1px solid gold;
+            font-size: 4rem;
+        }
+
     </style>
 </head>
 <body>
@@ -68,10 +81,21 @@
         Debaditya Singh
     </div> -->
 
-    <div class="wrapper">
+    <!-- <div class="wrapper">
         <div class="box px">I am 200px wide</div>
         <div class="box vw">I am 10vw wide</div>
         <div class="box em">I am 10em wide</div>
-    </div>
+    </div> -->
+
+    <p class="firstPara">
+        This is Debaditya
+    </p>
+
+    <!-- <div class="container">
+        <div class="box">
+            Welcome to Codehelp
+        </div>
+    </div> -->
+
 </body>
 </html>
