Content and Footer Updated

--- a/Lecture_26/index.html
+++ b/Lecture_26/index.html
@@ -40,7 +40,7 @@
                             <h2>Gulab Jamun</h2>
                             <div>
                                 <h3>Ingredients</h3>
-                                <ul>
+                                <ul class="ingBox">
                                     <li>Sugar</li>
                                     <li>Bread</li>
                                     <li>Oil</li>
@@ -49,7 +49,7 @@
                             
                             <div>
                                 <h3>Recipe</h3>
-                                <ol>
+                                <ol class="recipeBox">
                                     <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, labore?</li>
                                     <li>Lorem ipsum dolor sit.</li>
                                     <li>Lorem ipsum dolor sit amet consectetur.</li>
@@ -60,6 +60,9 @@
                         </div>
                         <div class="rightBox">
                             <img src="gulab-jamun.jpg" alt="gulab-jamun">
+                            <div class="overlay">
+                                <span>Click here to Buy</span>
+                            </div>
                         </div>
                     </div>
                 </section>
