--- a/Lecture_27/cards.html
+++ b/Lecture_27/cards.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cards</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
-
+        <div class="card">
+            <img src="images/qrcode.png" alt="">
+            <h2>Improve your front end skills by developing Projects</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim iure, eaque praesentium voluptatum
+                architecto culpa maxime velit deserunt.</p>
+        </div>
     </div>
 </body>
+
 </html>
