Payment box added

--- a/Lecture_27/cards2.html
+++ b/Lecture_27/cards2.html
@@ -20,6 +20,18 @@
                     dolorem.
                 </p>
             </div>
+
+            <div id="amountBox">
+
+            </div>
+
+            <button id="paymentButton">
+                <p>Proceed to Payment</p>
+            </button>
+
+            <div class="cancelBox">
+                <a href="#">Cancel Order</a>
+            </div>
         </div>
     </div>
 </body>
