Card two updated

--- a/Lecture_27/cards2.html
+++ b/Lecture_27/cards2.html
@@ -22,7 +22,18 @@
             </div>
 
             <div id="amountBox">
-
+                <div class="leftBox">
+                    <div class="imageBox">
+                        <img src="images/music.png" alt="">
+                    </div>
+                    <div id="textAmountBox">
+                        <p>Amount</p>
+                        <p>$99.9/year</p>
+                    </div>
+                </div>
+                <div class="rightBox">
+                    <a href="#">Change</a>
+                </div>
             </div>
 
             <button id="paymentButton">
