--- a/00_Extra Class/grid.html
+++ b/00_Extra Class/grid.html
@@ -11,22 +11,51 @@
             grid-gap: 20px;
             grid-auto-rows: minmax(100px, auto);
             grid-auto-columns: minmax(50px, auto);
+            column-gap: 20px;
+            row-gap: 20px;
         }
         .items{
             background-color: rgb(147, 197, 255);
             border:2px solid rgb(235, 66, 24);
             border-radius: 3px;
         }
+        #item-1{
+            grid-column-start: 1;
+            grid-column-end: 5;
+        }
+        /* #item-2{
+            grid-row-start: 2;
+            grid-row-end: 2;
+            grid-column-start: 2;
+            grid-column-end: 3;
+        } */
+
+        .item-1-container {
+            display: grid;
+            grid-template-columns: repeat(3,1fr);
+
+        }
+
+        .nested-items{
+            border: 3px solid greenyellow;
+            border-radius: 3px;
+            background-color: lightblue;
+        }
+
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="items">Dabba 1</div>
-        <div class="items">Dabba 2</div>
-        <div class="items">Dabba 3</div>
-        <div class="items">Dabba 4</div>
-        <div class="items">Dabba 5</div>
-        <div class="items">Dabba 6</div>
+        <div class="items item-1-container" id="item-1">
+            <div class="nested-items">inner dabba</div>
+            <div class="nested-items">inner dabba</div>
+            <div class="nested-items">inner dabba</div>
+        </div>
+        <div class="items" id="item-2">Dabba 2</div>
+        <div class="items" id="item-3">Dabba 3</div>
+        <div class="items" id="item-4">Dabba 4</div>
+        <div class="items" id="item-5">Dabba 5</div>
+        <div class="items" id="item-6">Dabba 6</div>
     </div>
 </body>
 </html>
